2026-02-07T02:02:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772257452 # 870
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 986 1466 / 987 1467
* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-17 2026-01-18 2026-01-19 2026-01-20] / [2026-02-01 2026-02-02]

2026-02-04T01:09:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21654294022 # 867
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 985 1465 / 987 1467
* notice: next accum: outdated-unq outdated-all / unq all: 986 1466 / 987 1467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-15 2026-01-16] / []

2026-02-03T01:14:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21612765189 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 985 1465 / 986 1466
* notice: next accum: outdated-unq outdated-all / unq all: 985 1465 / 987 1467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-02T01:14:10Z: