@@ -3,16 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2026-01-21T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-01-22T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-23T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -69,6 +59,16 @@
     },
     {
       "timestamp": "2026-02-03T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-04T00:00:00Z",
+      "count": 0,
+      "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-05T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
