@@ -1,3 +1,12 @@
+2026-02-08T02:35:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790930003 # 871
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
+* notice: next accum: outdated-unq outdated-all / unq all: 987 1467 / 989 1469
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-21 2026-01-22] / []
+
 2026-02-07T02:02:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21772257452 # 870
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-07
